[STYL-191][STYL-190] Validating image dataset
