# swagger_server/models/__init__.py
@@ -3,10 +3,13 @@
 from __future__ import absolute_import
 # import models into model package
 from .box import Box
+from .box_dataset import BoxDataset
 from .box_object import BoxObject
 from .boxes_array import BoxesArray
 from .get_feed_response import GetFeedResponse
 from .get_image_response import GetImageResponse
+from .get_images_by_category_response import GetImagesByCategoryResponse
+from .get_images_by_category_response_data import GetImagesByCategoryResponseData
 from .get_images_by_keyword_response import GetImagesByKeywordResponse
 from .get_images_by_keyword_response_data import GetImagesByKeywordResponseData
 from .get_images_response import GetImagesResponse
@@ -14,7 +17,9 @@ from .get_objects_by_image_id_response import GetObjectsByImageIdResponse
 from .get_objects_response import GetObjectsResponse
 from .get_objects_response_data import GetObjectsResponseData
 from .image import Image
+from .image_dataset import ImageDataset
 from .images_array import ImagesArray
 from .search_image_response import SearchImageResponse
 from .sim_image import SimImage
 from .simple_image import SimpleImage
+from .update_image_dataset_response import UpdateImageDatasetResponse
