# swagger_server/models/box_dataset.py
@@ -1,0 +1,142 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class BoxDataset(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, x1: float=None, y1: float=None, x2: float=None, y2: float=None):
+        """
+        BoxDataset - a model defined in Swagger
+
+        :param x1: The x1 of this BoxDataset.
+        :type x1: float
+        :param y1: The y1 of this BoxDataset.
+        :type y1: float
+        :param x2: The x2 of this BoxDataset.
+        :type x2: float
+        :param y2: The y2 of this BoxDataset.
+        :type y2: float
+        """
+        self.swagger_types = {
+            'x1': float,
+            'y1': float,
+            'x2': float,
+            'y2': float
+        }
+
+        self.attribute_map = {
+            'x1': 'x1',
+            'y1': 'y1',
+            'x2': 'x2',
+            'y2': 'y2'
+        }
+
+        self._x1 = x1
+        self._y1 = y1
+        self._x2 = x2
+        self._y2 = y2
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BoxDataset':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The BoxDataset of this BoxDataset.
+        :rtype: BoxDataset
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def x1(self) -> float:
+        """
+        Gets the x1 of this BoxDataset.
+
+        :return: The x1 of this BoxDataset.
+        :rtype: float
+        """
+        return self._x1
+
+    @x1.setter
+    def x1(self, x1: float):
+        """
+        Sets the x1 of this BoxDataset.
+
+        :param x1: The x1 of this BoxDataset.
+        :type x1: float
+        """
+
+        self._x1 = x1
+
+    @property
+    def y1(self) -> float:
+        """
+        Gets the y1 of this BoxDataset.
+
+        :return: The y1 of this BoxDataset.
+        :rtype: float
+        """
+        return self._y1
+
+    @y1.setter
+    def y1(self, y1: float):
+        """
+        Sets the y1 of this BoxDataset.
+
+        :param y1: The y1 of this BoxDataset.
+        :type y1: float
+        """
+
+        self._y1 = y1
+
+    @property
+    def x2(self) -> float:
+        """
+        Gets the x2 of this BoxDataset.
+
+        :return: The x2 of this BoxDataset.
+        :rtype: float
+        """
+        return self._x2
+
+    @x2.setter
+    def x2(self, x2: float):
+        """
+        Sets the x2 of this BoxDataset.
+
+        :param x2: The x2 of this BoxDataset.
+        :type x2: float
+        """
+
+        self._x2 = x2
+
+    @property
+    def y2(self) -> float:
+        """
+        Gets the y2 of this BoxDataset.
+
+        :return: The y2 of this BoxDataset.
+        :rtype: float
+        """
+        return self._y2
+
+    @y2.setter
+    def y2(self, y2: float):
+        """
+        Sets the y2 of this BoxDataset.
+
+        :param y2: The y2 of this BoxDataset.
+        :type y2: float
+        """
+
+        self._y2 = y2
+
