# swagger_server/models/update_image_dataset_response.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class UpdateImageDatasetResponse(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, message: str=None):
+        """
+        UpdateImageDatasetResponse - a model defined in Swagger
+
+        :param message: The message of this UpdateImageDatasetResponse.
+        :type message: str
+        """
+        self.swagger_types = {
+            'message': str
+        }
+
+        self.attribute_map = {
+            'message': 'message'
+        }
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UpdateImageDatasetResponse':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UpdateImageDatasetResponse of this UpdateImageDatasetResponse.
+        :rtype: UpdateImageDatasetResponse
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """
+        Gets the message of this UpdateImageDatasetResponse.
+
+        :return: The message of this UpdateImageDatasetResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """
+        Sets the message of this UpdateImageDatasetResponse.
+
+        :param message: The message of this UpdateImageDatasetResponse.
+        :type message: str
+        """
+
+        self._message = message
+
