# swagger_server/swagger/swagger.yaml
@@ -336,6 +336,11 @@ paths:
         description: ""
         required: false
         type: "string"
+      - name: "categoryName"
+        in: "query"
+        description: ""
+        required: false
+        type: "string"
       - name: "offset"
         in: "query"
         description: ""
@@ -353,6 +358,82 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/GetImagesByKeywordResponse"
+        400:
+          description: "Invalid input"
+      x-swagger-router-controller: "swagger_server.controllers.playground_controller"
+  /playgrounds/images/datasets/{source}/categories:
+    get:
+      tags:
+      - "playground"
+      summary: "Query to search multiple objects"
+      description: ""
+      operationId: "get_images_dataset_by_category"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "source"
+        in: "path"
+        description: ""
+        required: true
+        type: "string"
+      - name: "category"
+        in: "query"
+        description: ""
+        required: false
+        type: "string"
+      - name: "offset"
+        in: "query"
+        description: ""
+        required: false
+        type: "integer"
+        format: "int32"
+      - name: "limit"
+        in: "query"
+        description: ""
+        required: false
+        type: "integer"
+        format: "int32"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/GetImagesByCategoryResponse"
+        400:
+          description: "Invalid input"
+      x-swagger-router-controller: "swagger_server.controllers.playground_controller"
+  /playgrounds/images/datasets/{source}:
+    post:
+      tags:
+      - "playground"
+      summary: "Update image"
+      description: ""
+      operationId: "update_images_dataset_by_ids"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "source"
+        in: "path"
+        description: ""
+        required: true
+        type: "string"
+      - name: "ids"
+        in: "query"
+        description: ""
+        required: true
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "multi"
+      - name: "valid"
+        in: "query"
+        description: ""
+        required: true
+        type: "boolean"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/UpdateImageDatasetResponse"
         400:
           description: "Invalid input"
       x-swagger-router-controller: "swagger_server.controllers.playground_controller"
@@ -483,6 +564,44 @@ definitions:
         description: "Mobile thumbnail size of image url"
       version:
         type: "string"
+  BoxDataset:
+    type: "object"
+    properties:
+      x1:
+        type: "number"
+        format: "float"
+      y1:
+        type: "number"
+        format: "float"
+      x2:
+        type: "number"
+        format: "float"
+      y2:
+        type: "number"
+        format: "float"
+  ImageDataset:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+      bbox:
+        $ref: "#/definitions/BoxDataset"
+      category_class:
+        type: "string"
+      category_name:
+        type: "string"
+      height:
+        type: "integer"
+        format: "int32"
+      width:
+        type: "integer"
+        format: "int32"
+      source:
+        type: "string"
+      url:
+        type: "string"
+      url_with_box:
+        type: "string"
   ImagesArray:
     type: "array"
     items:
@@ -577,6 +696,18 @@ definitions:
         type: "string"
       data:
         $ref: "#/definitions/GetImagesByKeywordResponse_data"
+  GetImagesByCategoryResponse:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+      data:
+        $ref: "#/definitions/GetImagesByCategoryResponse_data"
+  UpdateImageDatasetResponse:
+    type: "object"
+    properties:
+      message:
+        type: "string"
   GetObjectsResponse_data:
     properties:
       boxes:
@@ -597,6 +728,14 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/SimpleImage"
+  GetImagesByCategoryResponse_data:
+    properties:
+      total_count:
+        type: "string"
+      images:
+        type: "array"
+        items:
+          $ref: "#/definitions/ImageDataset"
 externalDocs:
   description: "Find out more about BlueLens"
   url: "http://bluelens.io"
